reduce .card__back image size to 50% as temporary fix for overflowing images

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -209,7 +209,7 @@ img {
 
 .card__back img {
 	margin: 0 auto;
-	width: 65%;
+	width: 50%;
 }
 
 .cardScore {
